added password authentication script for login and for signup to my login and signup files

--- a/public/SignUp/signUp.html
+++ b/public/SignUp/signUp.html
@@ -44,7 +44,7 @@
     </main>
 
 
-
+    <script src="signup.js"></script>
     <script>
         // Your web app's Firebase configuration
         const firebaseConfig = {
