--- a/public/SignUp/signUp.html
+++ b/public/SignUp/signUp.html
@@ -32,7 +32,7 @@
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
-            <button type="submit" class="btn btn-primary">Sign Up</button>
+            <button type="submit" class="btn btn-primary" onclick="signUp(event)">Sign Up</button>
             <div class="d-flex align-items-center justify-content-center">
                 <hr class="w-50">
                 <span class="mx-3">or</span>
