added a post blog to my code

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Check me out</label>
       </div>
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <button type="submit" class="btn btn-primary" onclick="signIn(event)">Sign in</button>
       <div class="d-flex align-items-center justify-content-center">
         <hr class="w-50">
         <span class="mx-3">or</span>
