--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,44 +8,95 @@
     <title>Dashboard</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Welcome to your dashboard, <span id="userName"></span></h1>
+    <main>
+        <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <h1>Welcome to your dashboard, <span id="userName"></span></h1>
 
-    <form class="border w-50 p-4 border-primary rounded">
-        <div class="mb-3">
-            <label for="username" class="form-label">Author</label>
-            <input type="text" class="form-control" id="author" aria-describedby="emailHelp">
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">title</label>
-            <input type="text" class="form-control" id="title" aria-describedby="emailHelp">
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Content</label>
-            <textarea name="" id="content" cols="30" rows="10"></textarea>
-            <!-- <input type="password" class="form-control" id="password"> -->
-        </div>
-        <button type="submit" class="btn btn-primary" onclick="postBlog(event)">Post blog</button>
+        <form class="border w-50 p-4 border-primary rounded">
+            <div class="mb-3">
+                <label for="username" class="form-label">Author</label>
+                <input type="text" class="form-control" id="author" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">title</label>
+                <input type="text" class="form-control" id="title" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Content</label>
+                <textarea name="" id="content" cols="30" rows="10"></textarea>
+                <!-- <input type="password" class="form-control" id="password"> -->
+            </div>
+            <button type="submit" class="btn btn-primary" onclick="postBlog(event)">Post blog</button>
 
-    </form>
+        </form>
+    </main>
 
     <script>
-      
+
         // Your web app's Firebase configuration
         const firebaseConfig = {
-          apiKey: "AIzaSyDFxB_nKLuIHeU2rwfHy_w_FcHtRdMUtkg",
-          authDomain: "assignment-project-442a9.firebaseapp.com",
-          projectId: "assignment-project-442a9",
-          storageBucket: "assignment-project-442a9.appspot.com",
-          messagingSenderId: "368296308202",
-          appId: "1:368296308202:web:6036e29f6f107634ca5693"
+            apiKey: "AIzaSyDFxB_nKLuIHeU2rwfHy_w_FcHtRdMUtkg",
+            authDomain: "assignment-project-442a9.firebaseapp.com",
+            projectId: "assignment-project-442a9",
+            storageBucket: "assignment-project-442a9.appspot.com",
+            messagingSenderId: "368296308202",
+            appId: "1:368296308202:web:6036e29f6f107634ca5693"
         };
-      
+
         // Initialize Firebase
         const app = firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
-      </script>
+    </script>
     <script src="dashboard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
