--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="dashboard.css">
+    <script src="https://kit.fontawesome.com/85310ecdcf.js" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
-<body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+<body class="position-relative">
+    <nav class="navbar fixed-top navbar-expand-lg">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <a class="navbar-brand fb-logo-link" href="#">
                 <img src="../images/facebook-logo-2019.svg" alt="" class="fb-logo w-100">
@@ -62,9 +63,56 @@
         </div>
     </nav>
     <main class="d-flex">
-        <div class="bg-danger w-25 left">A</div>
-        <div class="bg-success w-50 middle">B</div>
-        <div class="bg-warning w-25 right">C</div>
+        <div class="bg-danger w-25 left overflow-auto">A</div>
+        <div class="w-50 middle d-flex align-items-center justify-content-center overflow-auto">
+            <div class="w-75 inner-middle pt-4">
+                <div class="story-div w-100 mb-3 rounded"></div>
+                <div class="post-div w-100 mb-3 rounded">
+                    <div class="p-3">
+                        <div class="d-flex align-items-center">
+                            <div class="me-2 pix-div">
+                                <p class="text-black rounded-circle bg-white d-flex align-items-center justify-content-center pix">A</p>
+                            </div>
+                            <div class="w-100 rounded-pill post-box p-2 ps-3">
+                                What's on your mind, <span id="profile-name"></span>
+                            </div>
+                            <div class="position-absolute w-100 d-flex align-items-center justify-content-center" id="myPostModal">
+                                <div class="w-50 d-flex align-items-center justify-content-center" id="open-post-modal">
+                                    <div id="write-post-modal" class="w-75 bg-danger">
+                                        <div class="p-3">
+                                            <h5 class="fw-bold text-center">Create Post</h5>
+                                        </div>
+                                        <hr class="mb-2 mt-0">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="mb-2 mt-3">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <button class="btn11 w-100 d-flex align-items-center justify-content-center">
+                                <div>
+                                    <i class="fa-solid fa-video me-2 video11-icon"></i>
+                                </div>
+                                <div class="grey">Live video</div>
+                            </button>
+                            <button class="btn11 w-100 d-flex align-items-center justify-content-center">
+                                <div>
+                                    <i class="fa-solid fa-photo-film me-2 photo-icon"></i>
+                                </div>
+                                <div class="grey">Photo/Video</div>
+                            </button>
+                            <button class="btn11 w-100 d-flex align-items justify-content">
+                                <div>
+                                    <i class="fa-solid fa-face-smile me-2 smiley-icon"></i>
+                                </div>
+                                <div class="grey">Feeling/activity</div>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-danger w-25 right overflow-auto">C</div>
     </main>
 
     <script>
