added an id to my object data so that i can use the id to keep track of the data if it actually exist in my database

--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -67,8 +67,8 @@
         <div class="middle d-flex align-items-center justify-content-center overflow-auto">
             <div class="w-75 inner-middle py-4">
                 <div class="story-div w-100 mb-3 rounded"></div>
-                <div class="post-div w-100 mb-3 rounded position-relative">
-                    <div class="p-3 position-relative">
+                <div class="post-div w-100 mb-3 rounded position-relative" id="on-your-mind">
+                    <div class="p-3">
                         <div class="d-flex align-items-center">
                             <div class="me-2 pix-div">
                                 <p
@@ -103,13 +103,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="" id="show-post">
-
+                <div class="" id="show-post">                    
                 </div>
                 <div class="position-absolute w-100 d-flex align-items-center justify-content-center"
                         id="myPostModal">
                         <div class="w-50 d-flex align-items-center justify-content-center" id="open-post-modal">
-                            
                         </div>
                 </div>
             </div>
