--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/85310ecdcf.js" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
@@ -21,9 +22,9 @@
                 <img src="../images/facebook-logo-2019.svg" alt="" class="fb-logo w-100">
             </a>
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <input class="form-control me-2 rounded-pill" type="search" placeholder="Search" aria-label="Search">
             </form>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -56,9 +57,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+            <div class="" role="">
+                <button class="btn btn-outline-success" type="submit" onclick="signOut()">SIgn Out</button>
             </div>
         </div>
     </nav>
@@ -73,28 +73,28 @@
                             <div class="me-2 pix-div">
                                 <p
                                     class="text-black rounded-circle bg-white d-flex align-items-center justify-content-center pix">
-                                        A</p>
+                                    A</p>
                             </div>
                             <div class="w-100 rounded-pill post-box p-2 ps-3" onclick="openPostModal()">
                                 What's on your mind, <span id="profile-name"></span>
                             </div>
-                                            
+
                         </div>
                         <hr class="mb-2 mt-3">
-                        <div class="d-flex align-items-center justify-content-between">
-                            <button class="btn11 w-100 d-flex align-items-center justify-content-center">
+                        <div class="d-flex align-items-center justify-content-between w-100">
+                            <button class="btn11 rounded w-100 d-flex align-items-center justify-content-center">
                                 <div>
                                     <i class="fa-solid fa-video me-2 video11-icon"></i>
                                 </div>
                                 <div class="grey">Live video</div>
                             </button>
-                            <button class="btn11 w-100 d-flex align-items-center justify-content-center">
+                            <button class="btn11 rounded w-100 d-flex align-items-center justify-content-center">
                                 <div>
                                     <i class="fa-solid fa-photo-film me-2 photo-icon"></i>
                                 </div>
                                 <div class="grey">Photo/Video</div>
                             </button>
-                            <button class="btn11 w-100 d-flex align-items justify-content">
+                            <button class="btn11 rounded w-100 d-flex align-items justify-content">
                                 <div>
                                     <i class="fa-solid fa-face-smile me-2 smiley-icon"></i>
                                 </div>
@@ -103,12 +103,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="" id="show-post">                    
+                <div class="" id="show-post">
                 </div>
-                <div class="position-absolute w-100 d-flex align-items-center justify-content-center"
-                        id="myPostModal">
-                        <div class="w-50 d-flex align-items-center justify-content-center" id="open-post-modal">
-                        </div>
+                <div class="position-absolute w-100 d-flex align-items-center justify-content-center" id="myPostModal">
+                    <div class="w-50 d-flex align-items-center justify-content-center" id="open-post-modal">
+                    </div>
                 </div>
             </div>
         </div>
