--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -64,8 +64,11 @@
     </nav>
     <main class="bg-danger w-100">
         <div class="d-flex position-relative">
-            <div class="left overflow-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, eaque!</div>
-            <!-- <div class="middle"></div> -->
+            <div class="left overflow-auto">
+                <div class="mx-1 my-1">
+                    <button class="profile-btn rounded p-2 w-100">Mustapha Abbas</button>
+                </div>
+            </div>
             <div class="middle d-flex align-items-center justify-content-center overflow-auto">
                 <div class="w-75 inner-middle py-4">
                     <div class="story-div w-100 mb-3 rounded"></div>
