been able to add a profile button and write the function that navigates from dashboard to the profile page, on the profile page, you can only view the current user's post alone while on the dashboard page, you can view all user's post

--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -66,7 +66,7 @@
         <div class="d-flex position-relative">
             <div class="left overflow-auto">
                 <div class="mx-1 my-1">
-                    <button class="profile-btn rounded p-2 w-100">Mustapha Abbas</button>
+                    <button class="profile-btn rounded p-2 w-100" onclick="gotoProfile()"><span id="profile-name"></span></button>
                 </div>
             </div>
             <div class="middle d-flex align-items-center justify-content-center overflow-auto">
@@ -81,7 +81,7 @@
                                         A</p>
                                 </div>
                                 <div class="w-100 rounded-pill post-box p-2 ps-3" onclick="openPostModal()">
-                                    What's on your mind, <span id="profile-name"></span>
+                                    What's on your mind, <span id="user-name"></span>
                                 </div>
     
                             </div>
