--- a/public/SignUp/signUp.html
+++ b/public/SignUp/signUp.html
@@ -39,6 +39,7 @@
                 <hr class="w-50">
             </div>
             <button class="btn btn-danger">Sign up with google</button>
+            <p>Already have an account? <button class="btn btn-success" onclick="gotoSignInPage(event)">Sign in here</button></p>
 
         </form>
     </main>
