--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,9 @@
         <hr class="w-50">
       </div>
       <button class="btn btn-danger">Sign in with google</button>
-
+      <div>
+        <p>Dont't have an account? <button class="btn btn-success" onclick="gotoSignUpPage(event)">Sign up here</button></p>
+      </div> 
     </form>
   </main>
 
