was able to toggle the state of isLike button from false to true and vice versa

--- a/public/Profile/profile.html
+++ b/public/Profile/profile.html
@@ -17,9 +17,13 @@
 
 <body>
     <main class="w-100 d-flex align-items-center justify-content-center">
-        <div class="w-25 left">a</div>
+        <div class="w-25 left">
+            <div class="mt-5">
+                <button class="btn btn-success" onclick="gotoHome()">Home</button>
+            </div>
+        </div>
         <div class="w-50 right overflow-auto">
-            <div id="showCurrent-userPost"></div>
+            <div id="showCurrent-userPost" class="w-75 mx-auto"></div>
         </div>
     </main>
 
