been able to change the button name from like to unlike and vice versa base on a condition

--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -87,7 +87,7 @@
                             </div>
                             <hr class="mb-2 mt-3">
                             <div class="d-flex align-items-center justify-content-between w-100">
-                                <button class="btn11 rounded w-100 d-flex align-items-center justify-content-center">
+                                <button class="btn11 rounded w-100 d-flex align-items-center justify-content-center" id="live-video">
                                     <div>
                                         <i class="fa-solid fa-video me-2 video11-icon"></i>
                                     </div>
