added color to the like button to toggle when click to like and unlike

--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -63,15 +63,15 @@
             </div>
         </div>
     </nav>
-    <main class="bg-danger w-100">
-        <div class="d-flex position-relative">
+    <main class="bg-danger">
+        <div class="d-flex position-relative w-100">
             <div class="left overflow-auto">
                 <div class="mx-1 my-1">
                     <button class="profile-btn rounded p-2 w-100" onclick="gotoProfile()"><span id="profile-name"></span></button>
                 </div>
             </div>
             <div class="middle d-flex align-items-center justify-content-center overflow-auto">
-                <div class="w-75 inner-middle py-4">
+                <div class="inner-middle py-4">
                     <div class="story-div w-100 mb-3 rounded"></div>
                     <div class="post-div w-100 mb-3 rounded position-relative" id="on-your-mind">
                         <div class="p-3">
