--- a/public/Profile/profile.html
+++ b/public/Profile/profile.html
@@ -78,20 +78,15 @@
                         <button class="btn btn-success">Upload cover photo</button>
                     </div>
                 </div>
-                <div class="w-75 bg-danger mx-auto mt-2">
-                    <div class="mx-auto bg-success profile-picture-div">
+                <div class="w-75 shadow mx-auto mt-2">
+                    <div class="mx-auto profile-picture-div">
                         <div class="d-flex">
-                            <div class="picture-circle">
-                                <div class="picture rounded-circle position-relative">
-                                    <div class="position-absolute mx-5 cam-div">
-                                        <form class="mt-5">
-                                            <input type="file" id="profile-picture" onchange="uploadImage(event)">
-                                            <button class="btn btn-success" onclick="savePictureToStorage(event)">Upload Image</button>
-                                        </form>
-                                        <!-- <i class="bi bi-camera cam rounded-circle"></i> -->
-                                    </div>
-                                </div>
-
+                            <div class="picture-circle ">
+                                <div class="position-relative" id="display-profile-pix">                                </div>
+                                <form class="picture-upload-div w-50">
+                                    <input type="file" id="profile-picture" onchange="uploadImage(event)"><br>
+                                    <button class="btn btn-success" onclick="savePictureToStorage(event)">Upload Image</button>
+                                </form>
                             </div>
                             <div>bb</div>
                         </div>
@@ -104,7 +99,7 @@
                         <button class="btn btn-success" onclick="gotoHome()">Home</button>
                     </div>
                 </div>
-                <div class="w-50 right overflow-auto pt-2">
+                <div class="w-50 right pt-2">
                     <div id="showCurrent-userPost" class="w-75 mx-auto"></div>
                 </div>
             </div>
