been able to add image to to the content user can post if the user wishes to add image to his or her post, else the user can post just the content alone

--- a/public/Profile/profile.html
+++ b/public/Profile/profile.html
@@ -78,7 +78,7 @@
                         <button class="btn btn-success">Upload cover photo</button>
                     </div>
                 </div>
-                <div class="w-75 shadow mx-auto mt-2">
+                <div class="w-75 shadow mx-auto mt-2 bg-black rounded py-2">
                     <div class="mx-auto profile-picture-div">
                         <div class="d-flex">
                             <div class="picture-circle ">
